add JVM flags to support chronicle map